2003-02-07  Todd Wright  <twright@bbn.com>

        * AgentProviderServlet.java
        Removed this servlet; the built-in "/agents" servlet has
        been used by CSMART since Cougaar 9.4+.  See bug #2564

2002-03-08  Brian Krisler  <bkrisler@bbn.com>

	* CommunityProviderServlet.java, MetricsServlet.java, PlanServlet.java, SearchServlet.java:
	Replaced the CSMART logging service with
	the NullLogging Service.  Once bug #1088
	is fixed, we can use a non-null service
	again.
	Note: For now servlets will not perform
	any logging.

2002-02-27  Aaron Helsinger  <ahelsing@clarinet.sl.bbn.com>

	* CommunityProviderServlet.java, MetricsServlet.java: javadoc cleanup

2002-02-25  Brian Krisler  <bkrisler@bbn.com>

	* SearchServlet.java: Removed 1.4 warning

2002-02-13  siracuse  <siracuse@clarinet.sl.bbn.com>

	* MetricsServlet.java, CommunityProviderServlet.java, AgentProviderServlet.java, AgentInfoServlet.java:
	Handle illegal parameters with a request.sendError() response

2002-02-12  James L Winston  <jwinston@clarinet.sl.bbn.com>

	* CommunityProviderServlet.java:
	Changed PlugIn to Plugin inside files and file names.

2002-02-01  Brian Krisler  <bkrisler@bbn.com>

	* PlanServlet.java: Fixed Logging Statments
	 - ensured that the right check was being done for the log level
	 - removed printStackTraces, they are now part of the log message.
	Corrected Copyright year

2002-01-31  Aaron Helsinger  <ahelsing@clarinet.sl.bbn.com>

	* CommunityProviderServlet.java, MetricsServlet.java, PlanServlet.java:
	logging cleanup

2002-01-31  Brian Krisler  <bkrisler@bbn.com>

	* CommunityProviderServlet.java, MetricsServlet.java:
	Changed logging category to just use getClass().getName().
	* This will prevent any future issues when repackaging.
	* Makes logging more fine grained

2002-01-25  siracuse  <siracuse@clarinet.sl.bbn.com>

	* AgentInfoServlet.java, AgentProviderServlet.java, CommunityProviderServlet.java, MetricsServlet.java, PlanServlet.java, SearchServlet.java: