@@ -1,3 +1,8 @@
+2003-04-03  Ray Tomlinson  <RTomlinson@bbn.com>
+
+	* TranslateUtils.java:
+	Changes for new AllocationforCollections API
+
 2003-02-07  Todd Wright  <twright@bbn.com>
 
         * AgentProviderServlet.java
